worked on error handling

--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,8 @@
 PORT=8000
 ORIGIN=['http://localhost:3000']
 NODE_ENV=development
-DB_URI='mongodb+srv://sherpa:sherpa@cluster0.amc2bpl.mongodb.net/lmsLearning'
+# DB_URI='mongodb+srv://sherpa:sherpa@cluster0.amc2bpl.mongodb.net/lmsLearning'
+DB_URI='mongodb://localhost:27017/Lms'
 CLOUD_NAME=du2cnyn3i
 CLOUD_API_KEY=133849585946974
 CLOUD_SECRET_KEY=aNsnyhRKLCPlvekpVD2kVd7cp1I
