user registration created

--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,9 @@ CLOUD_NAME=du2cnyn3i
 CLOUD_API_KEY=133849585946974
 CLOUD_SECRET_KEY=aNsnyhRKLCPlvekpVD2kVd7cp1I
 REDIS_URL=rediss-cli --tls -u redis://default:13ea47e4126b4376993d33fc5fd745f0@us1-loyal-manatee-38937.upstash.io:38937
+ACTIVATION_SECRET=1234
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=460
+SMTP_SERVICE=gmail
+SMTP_MAIL=fupulamu01@gmail.com
+SMTP_PASSWORD=ninq ryio iegg xnaa
