--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "nodemailer": "^6.9.8",
+    "nodemon": "^3.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
