--- a/server/.env
+++ b/server/.env
@@ -13,3 +13,7 @@ SMTP_PORT=460
 SMTP_SERVICE=gmail
 SMTP_MAIL=fupulamu01@gmail.com
 SMTP_PASSWORD=ninq ryio iegg xnaa
+ACCESS_TOKEN='V;:GUK??98nv2Tcq/8£"C>a*_=v,cr$RAe8^qzB6U9U,r.2&2j'
+REFRESH_TOKEN='mna+.C]tN{IQ5<Ox40&yp+3}?&-~Q5)iF%4Y-.+IsUM75Tct4U'
+ACCESS_TOKEN_EXPIRE=5
+REFRESH_TOKEN_EXPIRE=59
