--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.9.0",
+    "@types/node-cron": "^3.0.11",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.0",
     "cookie-parser": "^1.4.6",
@@ -31,6 +32,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.0.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
     "ts-node-dev": "^2.0.0",
